syntax = "proto3";

package grpc;

option go_package = "github.com/vimalkuriensam/auto_gear_nft/auth-service/internals/adaptor/framework/left/http2/proto";

message RegisterRequest {
    string firstName = 1;
    string lastName = 2;
    string password = 3;
    string email = 4;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message GetIDRequest {
    int32 id = 1;
}

message AuthResponse {
    bool success = 1;
    string message = 2;
    bytes data = 3;
    int32 Code = 4;
    string timestamp = 5;
}

service Authentications {
    rpc Register(RegisterRequest) returns (AuthResponse);
    rpc Login(LoginRequest) returns (AuthResponse);
    rpc GetUser(GetIDRequest) returns (AuthResponse);
    rpc DeleteUser(GetIDRequest) returns(AuthResponse);
}